# rustwc-ci

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs
tests/: integration_test.rs
