[package]
name = "rustwc"
version = "0.1.0"
edition = "2021"
authors = ["Peter Volgyesi <peter.volgyesi@gmail.com"]
description = "A simple word count program written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
clap = { version = "~4.0.0", features = ["derive"] }
predicates = "3.0.4"
